--- a/Clash/config/parser.yaml
+++ b/Clash/config/parser.yaml
@@ -42,8 +42,9 @@ parsers: # array
           proxies_All.forEach(e => e.name = e.name.replace(" 購物", ""))
         }
         if (name === 'SYN') {
+          let password = proxies_All[0].password
           proxies_All.push({ name: '🇱🇺 LU 硝酸二甲酯 0.01x', type: 'ss', server: 'traffic-in-01.811920.xyz', 
-          port: 50009, cipher: 'aes-128-gcm', password: 'cb6e3d36-1bd9-40aa-bf73-70f35ee6d6a8', udp: true })
+          port: 50009, cipher: 'aes-128-gcm', password: password, udp: true })
         }
     
         let sortProxies = []
