--- a/Clash/config/parser.yaml
+++ b/Clash/config/parser.yaml
@@ -21,6 +21,8 @@ parsers: # array
           name = 'Metaverse'
         } else if (proxies_Name.includes("🇭🇰HK QC 3×")) {
           name = 'Lend'
+        } else if (proxies_Name.includes("HongKong 🇭🇰 Wcloud")) {
+          name = '子墨'
         } else if (proxies_Name.includes("🇭🇰 HK 香港Hkbn家寬 500M 0.3x")) {
           name = 'To2'
         } else if (proxies_Name.includes("🇭🇰HK 酥皮菠蘿包")) {
@@ -31,22 +33,24 @@ parsers: # array
     
         if (name === 'Nexitally') {
           proxies_All = proxies_All.filter(e => !e.name.includes('Premium'))
-        }
-        if (name === '守候') {
+        } else if (name === '守候') {
           proxies_All.forEach(e => e.name = e.name.replace(" | 视频", "").replace(" | 游戏", ""))
-        }
-        if (name === 'Lend') {
+        } else if (name === 'Lend') {
           proxies_All.forEach(e => e.name = e.name.replace("Daily", "HK 喵呜"))
-        }
-        if (name === 'To2') {
+        } else if (name === '子墨') {
+          rawObj.proxies = proxies_All
+          return yaml.stringify({...rawObj, 'proxy-groups': [], 'rules': []})
+        } else if (name === 'To2') {
           proxies_All.forEach(e => e.name = e.name.replace(" 購物", ""))
-        }
-        if (name === 'SYN') {
+        } else if (name === 'SYN') {
+          let name = '🇱🇺 LU 硝酸二甲酯 0.01x'
           let type = proxies_All[0].type
           let server = proxies_All[0].server
+          let port = 50009
           let cipher = proxies_All[0].cipher
           let password = proxies_All[0].password
-          proxies_All.push({ name: '🇱🇺 LU 硝酸二甲酯 0.01x', type, server, port: 50009, cipher, password, udp: true })
+          let udp = true
+          proxies_All.push({ name, type, server, port, cipher, password, udp })
         }
     
         let sortProxies = []
@@ -70,10 +74,6 @@ parsers: # array
         if (name === 'VAE') {
           proxies_First = proxies_All.filter(e => e.name.includes('0.1'))
           proxies_All = proxies_All.filter(e => !e.name.includes('0.1'))
-        }
-        if (name === 'SYN') {
-          proxies_All.push({ name: '🇱🇺 LU 硝酸二甲酯 x 0.01', type: 'ss', server: 'traffic-in-01.811920.xyz', 
-          port: 50009, cipher: 'aes-128-gcm', password: <password>, udp: true })
         }
     
         proxies_All.forEach(e => e.name = e.name.replace("🇨🇳", "🇹🇼"))
