--- a/Clash/config/parser.yaml
+++ b/Clash/config/parser.yaml
@@ -58,20 +58,17 @@ parsers: # array
         if (name === 'Metaverse') {
           proxies_First = proxies_All.filter(e => e.name.includes('0.2X'))
           proxies_All = proxies_All.filter(e => !e.name.includes('0.2X'))
-        }
-        if (name === 'Lend') {
+        } else if (name === 'Lend') {
           proxies_First = proxies_All.filter(e => e.name.includes('0.01'))
           proxies_All = proxies_All.filter(e => !e.name.includes('0.01'))
           
           let proxies_DIRECT = proxies_All.filter(e => e.name.includes('DIRECT'))
           proxies_All = proxies_All.filter(e => !e.name.includes('DIRECT'))
           proxies_First.push(...proxies_DIRECT)
-        }
-        if (name === 'To2') {
+        } else if (name === 'To2') {
           proxies_First = proxies_All.filter(e => e.name.includes('0.1'))
           proxies_All = proxies_All.filter(e => !e.name.includes('0.1'))
-        }
-        if (name === 'VAE') {
+        } else if (name === 'VAE') {
           proxies_First = proxies_All.filter(e => e.name.includes('0.01'))
           proxies_All = proxies_All.filter(e => !e.name.includes('0.01'))
         }
