--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -106,16 +106,18 @@ static=🇺🇸美国, server-tag-regex=🇺🇸|美国|US|United, img-url=https
 
 # 节点远程订阅
 [server_remote]
-https://sub.store/download/Nexitally#sort=🇭🇰>🇨🇳>🇸🇬>🇯🇵>🇺🇸, tag=Nexitally, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Naiyou.png, update-interval=172800, opt-parser=true, enabled=true
-https://sub.store/download/Atomlantis#rename=Atom-@, tag=Atomlantis, img-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/atomlantis.png, update-interval=172800, opt-parser=true, enabled=true
-https://sub.store/download/Metaverse#sort=0.2X>🇭🇰>🇨🇳>🇸🇬>🇯🇵>🇺🇸, tag=Metaverse, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/MESL.png, update-interval=172800, opt-parser=true, enabled=true
-https://sub.store/download/wait#sort=🇭🇰>🇨🇳>🇸🇬>🇯🇵>🇺🇸, tag=守候, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Coffee1.png, update-interval=172800, opt-parser=true, enabled=true
+https://sub.store/download/Nexitally, tag=Nexitally, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Naiyou.png, update-interval=172800, opt-parser=true, enabled=true
+https://sub.store/download/wait, tag=守候, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Coffee1.png, update-interval=172800, opt-parser=true, enabled=true
+https://sub.store/download/Atomlantis, tag=Atomlantis, img-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/atomlantis.png, update-interval=172800, opt-parser=true, enabled=true
+https://sub.store/download/Metaverse, tag=Metaverse, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/MESL.png, update-interval=172800, opt-parser=true, enabled=true
 https://sub.store/download/TAG, tag=TAG, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Tag.png, update-interval=172800, opt-parser=true, enabled=true
 https://sub.store/download/SESE, tag=子墨, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Texon3.png, update-interval=172800, opt-parser=true, enabled=true
-https://sub.store/download/Lend#sort=喵呜>direct>🇭🇰>🇨🇳>🇸🇬>🇯🇵>🇺🇸, tag=Lend喵呜, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Lend3.png, update-interval=172800, opt-parser=true, enabled=true
+https://sub.store/download/Lend, tag=Lend喵呜, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Lend3.png, update-interval=172800, opt-parser=true, enabled=true
 https://sub.store/download/CTC, tag=CTC, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Fishport0.png, update-interval=172800, opt-parser=true, enabled=true
 https://sub.store/download/dimension, tag=次元云, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Ciyuanyun.png, update-interval=172800, opt-parser=true, enabled=true
-https://sub.store/download/VAE#rename=VAE-@&sort=🇭🇰>🇨🇳>🇸🇬>🇯🇵>🇺🇸, tag=VAE, img-url=https://raw.githubusercontent.com/Aovo7/Funny/main/icon/Vae.png, update-interval=172800, opt-parser=true, enabled=true
+https://sub.store/download/To2, tag=To2 Network, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/To21442.png, update-interval=172800, opt-parser=true, enabled=true
+https://sub.store/download/VAE, tag=VAE, img-url=https://raw.githubusercontent.com/Aovo7/Funny/main/icon/Vae.png, update-interval=172800, opt-parser=true, enabled=true
+https://sub.store/download/SYN, tag=SYN, img-url=https://s2.loli.net/2023/10/30/u7KTEYjczvl4ACM.png, update-interval=172800, opt-parser=true, enabled=true
 https://sub.store/download/unicorn, tag=独角兽, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Paofu2.png, update-interval=172800, opt-parser=true, enabled=false
 https://sub.store/download/XFSS, tag=XFSS, img-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/xfss1.png, update-interval=172800, opt-parser=true, enabled=false
 
