--- a/Clash/config/parser.yaml
+++ b/Clash/config/parser.yaml
@@ -51,11 +51,13 @@ parsers: # array
         if (name === '守候') {
           let proxies_HK_001 = proxies_HK.filter(e => e.name.includes('0.01'))
           let proxies_HK_01 = proxies_HK.filter(e => e.name.includes('0.1'))
+          let proxies_HK_02 = proxies_HK.filter(e => e.name.includes('0.2'))
           let proxies_HK_05 = proxies_HK.filter(e => e.name.includes('0.5'))
-          let proxies_HK_Other = proxies_HK.filter(e => !e.name.includes('0.01') && !e.name.includes('0.1') && !e.name.includes('0.5'))
+          let proxies_HK_Other = proxies_HK.filter(e => !e.name.includes('0.01') && !e.name.includes('0.1') && !e.name.includes('0.2') && !e.name.includes('0.5'))
           proxies_HK = []
           proxies_HK.push(...proxies_HK_001)
           proxies_HK.push(...proxies_HK_01)
+          proxies_HK.push(...proxies_HK_02)
           proxies_HK.push(...proxies_HK_05)
           proxies_HK.push(...proxies_HK_Other)
         }
