--- a/Clash/config/parser.yaml
+++ b/Clash/config/parser.yaml
@@ -51,14 +51,14 @@ parsers: # array
         if (name === '守候') {
           let proxies_HK_001 = proxies_HK.filter(e => e.name.includes('0.01'))
           let proxies_HK_01 = proxies_HK.filter(e => e.name.includes('0.1'))
-          let proxies_HK_02 = proxies_HK.filter(e => e.name.includes('0.2'))
-          let proxies_HK_05 = proxies_HK.filter(e => e.name.includes('0.5'))
-          let proxies_HK_Other = proxies_HK.filter(e => !e.name.includes('0.01') && !e.name.includes('0.1') && !e.name.includes('0.2') && !e.name.includes('0.5'))
+          let proxies_HK_02 = proxies_HK.filter(e => e.name.includes('京港'))
+          let proxies_HK_Random = proxies_HK.filter(e => e.name.includes('Random'))
+          let proxies_HK_Other = proxies_HK.filter(e => !e.name.includes('0.01') && !e.name.includes('0.1') && !e.name.includes('京港') && !e.name.includes('Random'))
           proxies_HK = []
           proxies_HK.push(...proxies_HK_001)
           proxies_HK.push(...proxies_HK_01)
           proxies_HK.push(...proxies_HK_02)
-          proxies_HK.push(...proxies_HK_05)
+          proxies_HK.push(...proxies_HK_Random)
           proxies_HK.push(...proxies_HK_Other)
         }
         proxies_All = proxies_All.filter(e => !e.name.includes('🇭🇰'))
