--- a/Clash/config/parser.yaml
+++ b/Clash/config/parser.yaml
@@ -16,7 +16,7 @@ parsers: # array
         if (name === 'Nexitally') {
           proxies_All = proxies_All.filter(e => !e.name.includes('Premium'))
         } else if (name === 'Lend喵呜') {
-          proxies_All.forEach(e => e.name = e.name.replace("Daily", "喵呜"))
+          proxies_All.forEach(e => e.name = e.name.replace("Daily", "喵呜").replace("RELAY", "喵呜"))
         } else if (name === 'Ayanami') {
           proxies_All.forEach(e => {
             if (e.name.includes('🇭🇰')) {
