--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -21,7 +21,7 @@ server_check_url = http://cp.cloudflare.com/generate_204
 geo_location_checker = http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
 
 # DNS 排除列表
-dns_exclusion_list = *.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me
+dns_exclusion_list = *.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
 
 # Quantumult 将不会处理到 excluded_routes 的流量
 excluded_routes = 239.255.255.250/32
