--- a/Clash/config/parser.yaml
+++ b/Clash/config/parser.yaml
@@ -81,7 +81,7 @@ parsers: # array
           sortProxies.push(...proxies_SG)
           sortProxies.push(...proxies_JP)
           sortProxies.push(...proxies_US)
-          sortProxies.push(...proxies04)
+          //sortProxies.push(...proxies04)
           sortProxies.push(...proxies_All)
       
           rawObj.proxies = sortProxies
