--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -203,6 +203,8 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Rewrit
 
 # 本地复写规则
 [rewrite_local]
+# 一只猫去水印
+https?:\/\/analysis\.20kaka.cn\/api\/wechat_v2\/index url script-response-body https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/QuantumultX/js/cat.js
 
 # 构造请求,脚本区,自行找库添加
 [task_local]
@@ -221,4 +223,4 @@ skip_validating_cert = true
 passphrase =
 p12 =
 
-hostname= -*.apple.com, -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
+hostname= -*.apple.com, -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com, analysis,20kaka.cn
