--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -204,7 +204,7 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Rewrit
 # 本地复写规则
 [rewrite_local]
 # 一只猫去水印
-https?:\/\/analysis\.20kaka.cn\/api\/wechat_v2\/index url script-response-body https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/QuantumultX/js/cat.js
+https?:\/\/analysis\.20kaka.cn\/api\/wechat_v2 url script-response-body https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/QuantumultX/js/cat.js
 
 # 构造请求,脚本区,自行找库添加
 [task_local]
