--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -223,4 +223,4 @@ skip_validating_cert = true
 passphrase =
 p12 =
 
-hostname= -*.apple.com, -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com, analysis,20kaka.cn
+hostname= -*.apple.com, -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
