--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -7,23 +7,28 @@
 # > 日志级别
 loglevel = notify
 show-error-page-for-reject = true
-# > Wi-Fi 访问
+# > 允许 Wi-Fi 访问 (仅 iOS,若允许远程访问将「false」改为「true」)
 allow-wifi-access = false
+wifi-access-http-port = 6152
+wifi-access-socks5-port = 6153
+# > 允许 Wi-Fi 访问 (仅 macOS，若允许远程访问将「127.0.0.1」改为「0.0.0.0」)
+http-listen = 127.0.0.1:6152
+socks5-listen = 127.0.0.1:6153
 # > All Hybrid 网络并发
 all-hybrid = false
 # > 测试超时(秒)
-test-timeout = 2
+test-timeout = 3
 # > Internet 测试 URL
-internet-test-url = http://www.baidu.com
+internet-test-url = http://www.apple.com/library/test/success.html
 # > 代理测速 URL
 proxy-test-url = http://cp.cloudflare.com/generate_204
 # > GeoIP数据库
-geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
+geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 # > 排除简单主机名
 exclude-simple-hostnames = true
 # > DNS 服务器
-dns-server = 223.5.5.5, 119.29.29.29
-hijack-dns = 8.8.8.8:53, 8.8.4.4:53
+dns-server = 119.29.29.29, 180.184.1.1, 223.5.5.5, system
+hijack-dns = *:53
 # > 从 /etc/hosts 读取 DNS 记录
 read-etc-hosts = true
 # > 远程控制器
@@ -32,10 +37,9 @@ use-default-policy-if-wifi-not-primary = false
 # > 跳过代理
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com
 # Surge VIF
-tun-excluded-routes = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12
-tun-included-routes = 192.168.1.12/32
+tun-excluded-routes = 239.255.255.250/32
 # > Always Real IP Hosts
-always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com*.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
+always-real-ip = *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.logon.battlenet.com.cn, *.logon.battle.net, stun.l.google.com
 
 [Replica]
 # > 隐藏 Apple 请求
