--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -66,7 +66,7 @@ Instagram = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
 Twitter = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
 PikPak = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
 Google = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
-Emby = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
+Emby = select, Proxy, 守候
 国外媒体 = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
 Guard = select, DIRECT, REJECT
 Final = select, DIRECT, Proxy
