--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -36,8 +36,6 @@ http-api-web-dashboard = false
 use-default-policy-if-wifi-not-primary = false
 # > 跳过代理
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com
-# Surge VIF
-tun-excluded-routes = 239.255.255.250/32
 # > Always Real IP Hosts
 always-real-ip = *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.logon.battlenet.com.cn, *.logon.battle.net, stun.l.google.com
 
@@ -51,7 +49,7 @@ NewYun = select, policy-path=https://sub.store/download/newyun, update-interval=
 Apple = select, DIRECT, Proxy
 Bilibili = select, DIRECT, Proxy, 香港, 台湾
 Telegram = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
-TikTok = select, Proxy, 日本, 美国
+TikTok = select, Proxy, DIRECT, 日本, 美国
 Instagram = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
 Twitter = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
 PikPak = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
