--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -56,8 +56,8 @@ PikPak = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
 Google = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
 Emby = select, Proxy, 守候
 国外媒体 = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
-Guard = select, DIRECT, REJECT
-Final = select, DIRECT, Proxy
+Guard = select, REJECT, DIRECT
+Final = select, Proxy, DIRECT
 香港 = select, policy-path=https://sub.store/download/Nexitally, policy-regex-filter=🇭🇰|香港|HK|Hong, update-interval=86400
 台湾 = select, policy-path=https://sub.store/download/Nexitally, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, update-interval=86400
 新加坡 = select, policy-path=https://sub.store/download/Nexitally, policy-regex-filter=🇸🇬|新加坡|SG|Singapore, update-interval=86400
